corpus/nesting-mixed.txt
==================
Nesting Mixed
==================

top 0
begin root
	parent 1
	begin children 1
		child 1
		child 2
	end
	parent 2
	begin children 2
		child 1
		child 2
	end
end

---

(file
	(statements
		(statement
			(line (NL))
		)
		(statement
			(instruction (identifier (IDENTIFIER)) (arguments
				(argument (argumentNumber (NUMBER)))
			) (NL))
		)
		(statement
			(block
				(begin (BEGIN) (identifier (IDENTIFIER)) (NL))
				(statements
					(statement
						(instruction (identifier (IDENTIFIER)) (arguments
							(argument (argumentNumber (NUMBER)))
						) (NL))
					)
					(statement
						(block
							(begin (BEGIN) (identifier (IDENTIFIER)) (arguments
								(argument (argumentNumber (NUMBER)))
							) (NL))
							(statements
								(statement
									(instruction (identifier (IDENTIFIER)) (arguments
										(argument (argumentNumber (NUMBER)))) (NL)
									)
								)
								(statement
									(instruction (identifier (IDENTIFIER)) (arguments
										(argument (argumentNumber (NUMBER)))) (NL)
									)
								)
							)
							(end (END) (NL))
						)
					)
					(statement
						(instruction (identifier (IDENTIFIER)) (arguments
							(argument (argumentNumber (NUMBER)))
						) (NL))
					)
					(statement
						(block
							(begin (BEGIN) (identifier (IDENTIFIER)) (arguments
								(argument (argumentNumber (NUMBER)))) (NL)
							)
							(statements
								(statement
									(instruction (identifier (IDENTIFIER)) (arguments
										(argument (argumentNumber (NUMBER)))
									) (NL))
								)
								(statement
									(instruction (identifier (IDENTIFIER)) (arguments
										(argument (argumentNumber (NUMBER)))
									) (NL))
								)
							)
							(end (END) (NL))
						)
					)
				)
				(end (END) (NL))))
	)
)
